# aiaibot

./: .gitattributes  .gitignore  index.html  netlify.toml  presale.html  script.js  style.css
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: tokenomics.md
onchain/aiai_onchain/: Anchor.toml
onchain/aiai_onchain/programs/aiai_onchain/: Cargo.toml
onchain/aiai_onchain/programs/aiai_onchain/src/: lib.rs
onchain/aiai_onchain/tests/: aiai_onchain.ts
onchain/aiai_onchain_v1/: Anchor.toml  buy.ts  create_mint.ts  init.ts  package-lock.json  package.json  tsconfig.json
onchain/aiai_onchain_v1/.github/workflows/: anchor-build.yml
onchain/aiai_onchain_v1/programs/aiai_onchain_v1/: Cargo.toml
onchain/aiai_onchain_v1/programs/aiai_onchain_v1/src/: lib.rs
onchain/aiai_onchain_v1/tests/: aiai_onchain_v1.ts
ops/: .gitignore  README.md
